# infer-explore

./: .env.example  LICENSE  README.md  pyproject.toml
data/: artificial_analysis_models.csv  artificial_analysis_models.json  bifrost_models.csv  bifrost_models.json  huggingface_openevals_models.csv  huggingface_openevals_models.json  merged_models.csv  merged_models.json  vantage_models.csv  vantage_models.json
model-table-explorer/: index.html
openrouter-cost-explorer/: index.html
scripts/: README.md  fetch_all.py  fetch_artificial_analysis.py  fetch_bifrost.py  fetch_huggingface.py  fetch_vantage.py  merge_all.py
src/infer_explore/: __init__.py  cli.py  helpers.py
src/infer_explore/sources/: __init__.py  artificial_analysis.py  bifrost.py  huggingface.py  merged.py  model_id.py  vantage.py
tests/: test_model_id.py
